--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,8 @@
 ---
-id: osrs-runescape-grand-exchange
+id: runescape
 name: OSRS Runescape Grand Exchange
-summary: Shows item information of OSRS Runescape's Grand Exchange
-desc: Shows information of OSRS Runescape items using the Runescape API.
+summary: Shows item information from OSRS Runescape's Grand Exchange
+desc: Shows item information from OSRS Runescape using the Runescape API.
 author: blakekwehrle
-fileName: osrs_runescape_grand_exchange.star
-packageName: osrsrunescapegrandexchange
+fileName: runescape.star
+packageName: runescape
